--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <groupId>com.example</groupId>
   <artifactId>dev-utils</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>devutils</name>
+  <name>dev-utils</name>
   <description>Demo project for Spring Boot</description>
 
   <properties>
@@ -26,7 +26,7 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter</artifactId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
     </dependency>
 
     <dependency>
