--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
+    <!-- 流式操作扩展 -->
+    <dependency>
+      <groupId>org.jooq</groupId>
+      <artifactId>jool-java-8</artifactId>
+      <version>0.9.14</version>
+    </dependency>
     <!-- 反射 -->
     <dependency>
       <groupId>org.jooq</groupId>
@@ -68,6 +74,12 @@
       <groupId>org.csource.fastdfs</groupId>
       <artifactId>fastdfs</artifactId>
       <version>1.2</version>
+    </dependency>
+    <!-- EasyExcel -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>easyexcel</artifactId>
+      <version>2.2.5</version>
     </dependency>
   </dependencies>
 
