--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
       <artifactId>easyexcel</artifactId>
       <version>2.2.5</version>
     </dependency>
+    <!-- Markdown解析 -->
+    <dependency>
+      <groupId>com.atlassian.commonmark</groupId>
+      <artifactId>commonmark</artifactId>
+      <version>0.15.0</version>
+    </dependency>
   </dependencies>
 
 </project>
