--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,6 @@
   <groupId>com.example</groupId>
   <artifactId>dev-utils</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>dev-utils</name>
-  <description>Demo project for Spring Boot</description>
 
   <properties>
     <java.version>1.8</java.version>
@@ -23,69 +21,93 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jdbc</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <scope>provided</scope>
     </dependency>
     <!-- 流式操作扩展 -->
     <dependency>
       <groupId>org.jooq</groupId>
       <artifactId>jool-java-8</artifactId>
       <version>0.9.14</version>
+      <scope>provided</scope>
     </dependency>
     <!-- 反射 -->
     <dependency>
       <groupId>org.jooq</groupId>
       <artifactId>joor-java-8</artifactId>
       <version>0.9.12</version>
+      <scope>provided</scope>
     </dependency>
     <!-- IK分词器 -->
     <dependency>
       <groupId>com.jianggujin</groupId>
       <artifactId>IKAnalyzer-lucene</artifactId>
       <version>8.0.0</version>
+      <scope>provided</scope>
     </dependency>
     <!-- HTTP请求 -->
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
       <version>3.14.0</version>
+      <scope>provided</scope>
     </dependency>
     <!-- 网页解析 -->
     <dependency>
       <groupId>org.jsoup</groupId>
       <artifactId>jsoup</artifactId>
       <version>1.11.3</version>
+      <scope>provided</scope>
     </dependency>
     <!-- UserAgent解析 -->
     <dependency>
       <groupId>eu.bitwalker</groupId>
       <artifactId>UserAgentUtils</artifactId>
       <version>1.21</version>
+      <scope>provided</scope>
     </dependency>
     <!-- FastDFS -->
     <dependency>
       <groupId>org.csource.fastdfs</groupId>
       <artifactId>fastdfs</artifactId>
       <version>1.2</version>
+      <scope>provided</scope>
     </dependency>
     <!-- EasyExcel -->
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>easyexcel</artifactId>
       <version>2.2.5</version>
+      <scope>provided</scope>
     </dependency>
     <!-- Markdown解析 -->
     <dependency>
       <groupId>com.atlassian.commonmark</groupId>
       <artifactId>commonmark</artifactId>
       <version>0.15.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <!-- 单元测试 -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
