--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,21 @@
   </parent>
   <groupId>com.example</groupId>
   <artifactId>dev-utils</artifactId>
-  <version>0.0.1.20083001-SNAPSHOT</version>
+  <version>1.0.1.2010-SNAPSHOT</version>
 
   <properties>
     <java.version>1.8</java.version>
+    <jool-java-8.version>0.9.14</jool-java-8.version>
+    <joor-java-8.version>0.9.12</joor-java-8.version>
+    <ikanalyzer.version>8.0.0</ikanalyzer.version>
+    <okhttp.version>3.14.0</okhttp.version>
+    <jsoup.version>1.11.3</jsoup.version>
+    <useragent.version>1.21</useragent.version>
+    <fastdfs.version>1.2</fastdfs.version>
+    <easyexcel.version>2.2.5</easyexcel.version>
+    <commonmark.version>0.15.0</commonmark.version>
+    <json-path.version>2.4.0</json-path.version>
+    <junit.version>4.13.1</junit.version>
   </properties>
 
   <dependencies>
@@ -43,62 +54,97 @@
     <dependency>
       <groupId>org.jooq</groupId>
       <artifactId>jool-java-8</artifactId>
-      <version>0.9.14</version>
+      <version>${jool-java-8.version}</version>
     </dependency>
     <!-- 反射 -->
     <dependency>
       <groupId>org.jooq</groupId>
       <artifactId>joor-java-8</artifactId>
-      <version>0.9.12</version>
+      <version>${joor-java-8.version}</version>
     </dependency>
     <!-- IK分词器 -->
     <dependency>
       <groupId>com.jianggujin</groupId>
       <artifactId>IKAnalyzer-lucene</artifactId>
-      <version>8.0.0</version>
+      <version>${ikanalyzer.version}</version>
     </dependency>
     <!-- HTTP请求 -->
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
-      <version>3.14.0</version>
+      <version>${okhttp.version}</version>
     </dependency>
     <!-- 网页解析 -->
     <dependency>
       <groupId>org.jsoup</groupId>
       <artifactId>jsoup</artifactId>
-      <version>1.11.3</version>
+      <version>${jsoup.version}</version>
     </dependency>
     <!-- UserAgent解析 -->
     <dependency>
       <groupId>eu.bitwalker</groupId>
       <artifactId>UserAgentUtils</artifactId>
-      <version>1.21</version>
+      <version>${useragent.version}</version>
     </dependency>
     <!-- FastDFS -->
     <dependency>
       <groupId>org.csource.fastdfs</groupId>
       <artifactId>fastdfs</artifactId>
-      <version>1.2</version>
+      <version>${fastdfs.version}</version>
     </dependency>
     <!-- EasyExcel -->
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>easyexcel</artifactId>
-      <version>2.2.5</version>
+      <version>${easyexcel.version}</version>
     </dependency>
     <!-- Markdown解析 -->
     <dependency>
       <groupId>com.atlassian.commonmark</groupId>
       <artifactId>commonmark</artifactId>
-      <version>0.15.0</version>
+      <version>${commonmark.version}</version>
+    </dependency>
+    <!-- 以xpath的方式解析json -->
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <version>${json-path.version}</version>
     </dependency>
     <!-- 单元测试 -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>local</groupId>
+      <artifactId>antlr</artifactId>
+      <version>2.7.4</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/antlr-2.7.4.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>local</groupId>
+      <artifactId>chardet</artifactId>
+      <version>1.0</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/chardet-1.0.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>local</groupId>
+      <artifactId>cpdetector</artifactId>
+      <version>1.0.10</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/cpdetector_1.0.10.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>local</groupId>
+      <artifactId>jargs</artifactId>
+      <version>1.0</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/jargs-1.0.jar</systemPath>
     </dependency>
   </dependencies>
 
